cmake_minimum_required( VERSION 2.8.3 )

add_definitions( -Wall -pedantic -ggdb -O0 )

add_executable( listing1 listing1.cpp )

add_executable( listing2 listing2.cpp )

add_executable( listing3 listing3.cpp )

add_executable( listing4 listing4.cpp )

add_executable( listing5 listing5.cpp )

add_executable( listing6 listing6.cpp )

add_executable( listing7 listing7.cpp )

add_executable( listing8 listing8.cpp )
